syntax = "proto3";

option go_package =  "./grpc";

message Request {
  int64 Id = 1;
}

message Response {
  repeated Rule Rules=1;
}

message Rule{
  string Name=1;
  string ListenIP=2;
  int64 ListenPort=3;
  string TargetType=4;
  repeated string TargetIP=5;
  repeated int64 TargetPort=6;
  bytes Ext=7;
  int64 ServerId=8;
}

service Server {
  rpc ListenAndGetRules(Request) returns (stream Response) {}
}